--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wallet-connect-sdk-core",
-  "version": "0.0.0",
+  "name": "@cityofzion/wallet-connect-sdk-core",
+  "version": "0.0.1",
   "description": "Wallet-Connect-SDK Core functionality",
   "keywords": [
     "wallet",
