--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wallet-connect-sdk-react",
-  "version": "0.0.0",
+  "name": "@cityofzion/wallet-connect-sdk-react",
+  "version": "0.0.1",
   "description": "Wallet-Connect-SDK to be used on React Apps",
   "keywords": [
     "wallet",
@@ -36,6 +36,6 @@
     "react": "^17.0.2"
   },
   "dependencies": {
-    "wallet-connect-sdk-core": "^0.0.0"
+    "@cityofzion/wallet-connect-sdk-core": "^0.0.1"
   }
 }
