--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallet-connect-sdk-react",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Wallet-Connect-SDK to be used on React Apps",
   "keywords": [
     "wallet",
@@ -35,5 +35,6 @@
   "dependencies": {
     "react": "^17.0.2",
     "wallet-connect-sdk-core": "^0.0.1"
-  }
+  },
+  "gitHead": "675a22457e2c967c68f0e2450359e6e687536655"
 }
