--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wallet-connect-sdk-core",
+  "name": "@cityofzion/wallet-connect-sdk-core",
   "version": "0.0.2",
   "description": "Wallet-Connect-SDK Core functionality",
   "keywords": [
