--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wallet-connect-sdk-react",
+  "name": "@cityofzion/wallet-connect-sdk-react",
   "version": "0.0.2",
   "description": "Wallet-Connect-SDK to be used on React Apps",
   "keywords": [
