--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -33,8 +33,13 @@
     "url": "https://github.com/CityOfZion/wallet-connect-sdk/issues"
   },
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-core": "^0.0.5",
+    "@cityofzion/wallet-connect-sdk-core": "^0.0.5"
+  },
+  "gitHead": "675a22457e2c967c68f0e2450359e6e687536655",
+  "devDependencies": {
     "react": "^17.0.2"
   },
-  "gitHead": "675a22457e2c967c68f0e2450359e6e687536655"
+  "peerDependencies": {
+    "react": "17.x"
+  }
 }
