--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "publish": "lerna run tsc && lerna publish"
+    "build": "lerna run build",
+    "publish": "lerna run build && lerna publish"
   },
   "dependencies": {
     "@walletconnect/client": "2.0.0-alpha.42",
