--- a/packages/wallet-connect-sdk-react/tsconfig.json
+++ b/packages/wallet-connect-sdk-react/tsconfig.json
@@ -1,13 +1,16 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib/esm",
+    "outDir": ".lib/esm",
     "module": "esnext",
+    "target": "es5",
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "jsx": "react",
-    "moduleResolution": "node"
+    "declaration": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "./src"
-  ],
-  "exclude": ["lib"]
+  "include": ["./src"],
+  "exclude": ["./node_modules", "./lib"]
 }
