--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.3.2"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
