--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -31,5 +31,11 @@
   "bugs": {
     "url": "https://github.com/CityOfZion/wallet-connect-sdk/issues"
   },
-  "gitHead": "675a22457e2c967c68f0e2450359e6e687536655"
+  "gitHead": "675a22457e2c967c68f0e2450359e6e687536655",
+  "dependencies": {
+    "@walletconnect/client": "2.0.0-alpha.42",
+    "@walletconnect/qrcode-modal": "2.0.0-alpha.20",
+    "@walletconnect/types": "2.0.0-alpha.42",
+    "@walletconnect/utils": "2.0.0-alpha.42"
+  }
 }
