--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -38,10 +38,11 @@
   },
   "dependencies": {
     "@cityofzion/wallet-connect-sdk-core": "^0.0.18",
-    "@walletconnect/client": "2.0.0-alpha.42",
-    "@walletconnect/qrcode-modal": "2.0.0-alpha.20",
-    "@walletconnect/types": "2.0.0-alpha.42",
-    "@walletconnect/utils": "2.0.0-alpha.42"
+    "@walletconnect/client": "^2.0.0-beta.17",
+    "@walletconnect/qrcode-modal": "^2.0.0-alpha.20",
+    "@walletconnect/types": "^2.0.0-beta.17",
+    "@walletconnect/utils": "^2.0.0-beta.17",
+    "@walletconnect/jsonrpc-utils": "^1.0.0"
   },
   "peerDependencies": {
     "react": "*"
@@ -75,7 +76,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.4",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^4.0.3",
     "typescript": "^3.7.5"
   },
   "files": [
