--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityofzion/wallet-connect-sdk-core",
-  "version": "0.0.18",
+  "version": "1.0.0",
   "description": "Wallet-Connect-SDK Core functionality",
   "keywords": [
     "wallet",
@@ -34,9 +34,9 @@
   "gitHead": "675a22457e2c967c68f0e2450359e6e687536655",
   "dependencies": {
     "@walletconnect/client": "^2.0.0-beta.17",
+    "@walletconnect/jsonrpc-utils": "^1.0.0",
     "@walletconnect/qrcode-modal": "^2.0.0-alpha.20",
     "@walletconnect/types": "^2.0.0-beta.17",
-    "@walletconnect/utils": "^2.0.0-beta.17",
-    "@walletconnect/jsonrpc-utils": "^1.0.0"
+    "@walletconnect/utils": "^2.0.0-beta.17"
   }
 }
