--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityofzion/wallet-connect-sdk-react",
-  "version": "0.0.18",
+  "version": "1.0.0",
   "description": "Wallet-Connect-SDK to be used on React Apps",
   "keywords": [
     "wallet",
@@ -37,12 +37,12 @@
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-core": "^0.0.18",
+    "@cityofzion/wallet-connect-sdk-core": "^1.0.0",
     "@walletconnect/client": "^2.0.0-beta.17",
+    "@walletconnect/jsonrpc-utils": "^1.0.0",
     "@walletconnect/qrcode-modal": "^2.0.0-alpha.20",
     "@walletconnect/types": "^2.0.0-beta.17",
-    "@walletconnect/utils": "^2.0.0-beta.17",
-    "@walletconnect/jsonrpc-utils": "^1.0.0"
+    "@walletconnect/utils": "^2.0.0-beta.17"
   },
   "peerDependencies": {
     "react": "*"
