updates the handling of invocations

--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -33,11 +33,11 @@
   },
   "gitHead": "675a22457e2c967c68f0e2450359e6e687536655",
   "dependencies": {
-    "@walletconnect/client": "^2.0.0-beta.17",
+    "@walletconnect/client": "2.0.0-beta.17",
     "@walletconnect/jsonrpc-utils": "^1.0.0",
     "@walletconnect/qrcode-modal": "^2.0.0-alpha.20",
-    "@walletconnect/types": "^2.0.0-beta.17",
-    "@walletconnect/utils": "^2.0.0-beta.17"
+    "@walletconnect/types": "2.0.0-beta.17",
+    "@walletconnect/utils": "2.0.0-beta.17"
   },
   "devDependencies": {
     "typescript": "^4.3.2"
