--- a/packages/wallet-connect-sdk-core/tsconfig.json
+++ b/packages/wallet-connect-sdk-core/tsconfig.json
@@ -4,6 +4,13 @@
     "outDir": "./dist"
   },
   "include": [
-    "./src"
-  ]
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "typedocOptions": {
+    "entryPoints": ["./src/index.ts"],
+    "out": "docs"
+  }
 }
