--- a/packages/wallet-connect-sdk-react/tsconfig.json
+++ b/packages/wallet-connect-sdk-react/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
     "module": "esnext",
@@ -17,6 +18,14 @@
     "noUnusedParameters": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "example"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "typedocOptions": {
+    "entryPoints": ["./src/index.tsx"],
+    "out": "docs"
+  }
 }
