--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -81,7 +81,8 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.4",
     "react-scripts": "^4.0.3",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "typedoc": "^0.22.11"
   },
   "files": [
     "dist"
