--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -42,11 +42,8 @@
   },
   "dependencies": {
     "@cityofzion/wallet-connect-sdk-core": "^1.6.1",
-    "@walletconnect/client": "2.0.0-beta.17",
-    "@walletconnect/jsonrpc-utils": "^1.0.0",
-    "@walletconnect/qrcode-modal": "^2.0.0-alpha.20",
-    "@walletconnect/types": "2.0.0-beta.17",
-    "@walletconnect/utils": "2.0.0-beta.17"
+    "@walletconnect/client": "2.0.0-beta.26",
+    "@walletconnect/types": "2.0.0-beta.26"
   },
   "peerDependencies": {
     "react": "*"
