--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -42,8 +42,8 @@
   },
   "dependencies": {
     "@cityofzion/wallet-connect-sdk-core": "^1.6.1",
-    "@walletconnect/client": "2.0.0-beta.26",
-    "@walletconnect/types": "2.0.0-beta.26"
+    "@walletconnect/sign-client": "^2.0.0-beta.100",
+    "@walletconnect/types": "^2.0.0-beta.100"
   },
   "peerDependencies": {
     "react": "*"
