--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityofzion/wallet-connect-sdk-core",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Wallet-Connect-SDK Core functionality",
   "keywords": [
     "wallet",
@@ -38,8 +38,8 @@
   "gitHead": "675a22457e2c967c68f0e2450359e6e687536655",
   "dependencies": {
     "@cityofzion/neon-core": "^5.0.0",
-    "@walletconnect/sign-client": "^2.0.0-beta.102",
-    "@walletconnect/types": "^2.0.0-beta.102"
+    "@walletconnect/sign-client": "^2.0.0-rc.0",
+    "@walletconnect/types": "^2.0.0-rc.0"
   },
   "devDependencies": {
     "typedoc": "^0.22.10",
