--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityofzion/wallet-connect-sdk-react",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "description": "Wallet-Connect-SDK to be used on React Apps",
   "keywords": [
     "wallet",
@@ -41,9 +41,10 @@
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-core": "^2.0.7",
-    "@walletconnect/sign-client": "^2.0.0-rc.0",
-    "@walletconnect/types": "^2.0.0-rc.0"
+    "@cityofzion/wallet-connect-sdk-core": "^2.1.0",
+    "@walletconnect/sign-client": "2.0.0-rc.3",
+    "@walletconnect/types": "2.0.0-rc.3",
+    "@cityofzion/neo3-invoker": "^1.0.4"
   },
   "peerDependencies": {
     "react": "*"
