--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityofzion/wallet-connect-sdk-react",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Wallet-Connect-SDK to be used on React Apps",
   "keywords": [
     "wallet",
@@ -41,7 +41,7 @@
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-core": "^2.1.1",
+    "@cityofzion/wallet-connect-sdk-core": "2.1.2",
     "@walletconnect/sign-client": "2.0.0-rc.3",
     "@walletconnect/types": "2.0.0-rc.3",
     "@cityofzion/neo3-invoker": "^1.0.4"
