--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityofzion/wallet-connect-sdk-core",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "Wallet-Connect-SDK Core functionality",
   "keywords": [
     "wallet",
@@ -40,7 +40,8 @@
     "@cityofzion/neon-core": "^5.0.0",
     "@walletconnect/sign-client": "2.0.0-rc.3",
     "@walletconnect/types": "2.0.0-rc.3",
-    "@cityofzion/neo3-invoker": "1.0.4"
+    "@cityofzion/neo3-invoker": "1.0.6",
+    "@cityofzion/neo3-signer": "1.0.0"
   },
   "devDependencies": {
     "typedoc": "^0.22.10",
