--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -41,11 +41,11 @@
     "deploy": "gh-pages -d example/build"
   },
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-core": "2.3.0",
+    "@cityofzion/wallet-connect-sdk-core": "2.3.1",
     "@walletconnect/sign-client": "2.0.0-rc.3",
     "@walletconnect/types": "2.0.0-rc.3",
-    "@cityofzion/neo3-invoker": "^1.3.0",
-    "@cityofzion/neo3-signer": "^1.0.1"
+    "@cityofzion/neo3-invoker": "1.3.0",
+    "@cityofzion/neo3-signer": "1.0.1"
   },
   "peerDependencies": {
     "react": "*"
