--- a/packages/wallet-connect-sdk-wallet-react/package.json
+++ b/packages/wallet-connect-sdk-wallet-react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@cityofzion/wallet-connect-sdk-react",
-  "version": "2.3.5",
-  "description": "Wallet-Connect-SDK to be used on React Apps",
+  "name": "@cityofzion/wallet-connect-sdk-wallet-react",
+  "version": "1.0.0",
+  "description": "Wallet-Connect-SDK  wallet-side to be used on React Apps",
   "keywords": [
     "wallet",
     "wallet-connect",
@@ -10,13 +10,13 @@
     "react",
     "libraries"
   ],
-  "author": "Gil Lopes Bueno <melanke.hc@gmail.com>",
+  "author": "Raul Duarte Pereira <https://github.com/raulduartep>",
   "homepage": "https://github.com/CityOfZion/wallet-connect-sdk#readme",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "types": "dist/index.d.ts",
-  "source": "src/index.tsx",
+  "source": "src/index.ts",
   "engines": {
     "node": ">=10"
   },
@@ -28,18 +28,13 @@
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "docs": "typedoc",
+    "fmt": "eslint .",
     "publishDocs:develop": "aws s3 sync ./docs s3://marketing-neon-wallet/dev/wksdk/react --acl public-read",
     "publishDocs:prod": "aws s3 sync ./docs s3://marketing-neon-wallet/prod/wksdk/react --acl public-read",
-    "prepare": "run-s build",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "prepare": "run-s build"
   },
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-core": "2.3.5",
-    "@walletconnect/sign-client": "2.0.0-rc.3",
-    "@walletconnect/types": "2.0.0-rc.3",
-    "@cityofzion/neo3-invoker": "1.3.0",
-    "@cityofzion/neo3-signer": "1.0.1"
+    "@cityofzion/wallet-connect-sdk-wallet-core": "1.0.0"
   },
   "peerDependencies": {
     "react": "*"
@@ -48,7 +43,7 @@
     "@types/node": "^12.12.38",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
-    "gh-pages": "^2.2.0",
+    "cross-env": "^7.0.2",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
