--- a/packages/wallet-connect-sdk-wallet-core/tsconfig.json
+++ b/packages/wallet-connect-sdk-wallet-core/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "strict": true,
-    "lib": ["ESNext", "dom"],
-    "target": "ESNext"
+    "strict": true
   },
   "include": ["src"],
   "exclude": ["node_modules"],
