--- a/packages/wallet-connect-sdk-wallet-core/package.json
+++ b/packages/wallet-connect-sdk-wallet-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cityofzion/wallet-connect-sdk-wallet-core",
-  "version": "2.4.5",
+  "version": "2.5.0",
   "description": "Wallet-Connect-SDK wallet-side core functionality",
   "keywords": [
     "wallet",
@@ -35,7 +35,9 @@
     "@cityofzion/neon-core": "5.3.0",
     "@cityofzion/neon-invoker": "1.4.1",
     "@cityofzion/neon-signer": "1.1.1",
-    "@cityofzion/wallet-connect-sdk-core": "2.4.5",
+    "@cityofzion/neon-parser": "1.6.5",
+    "@cityofzion/neo3-parser": "1.6.5",
+    "@cityofzion/wallet-connect-sdk-core": "2.5.0",
     "@walletconnect/sign-client": "2.7.3",
     "@walletconnect/types": "2.7.3",
     "moment": "^2.29.4"
