--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -40,8 +40,7 @@
     "@cityofzion/neon-core": "5.3.0",
     "@walletconnect/sign-client": "2.0.0-rc.3",
     "@walletconnect/types": "2.0.0-rc.3",
-    "@cityofzion/neo3-invoker": "1.4.1",
-    "@cityofzion/neo3-signer": "1.1.0"
+    "@cityofzion/neon-dappkit-types": "0.0.5"
   },
   "devDependencies": {
     "typedoc": "^0.22.10",
