--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -38,8 +38,7 @@
     "@cityofzion/wallet-connect-sdk-core": "2.5.4",
     "@walletconnect/sign-client": "2.0.0-rc.3",
     "@walletconnect/types": "2.0.0-rc.3",
-    "@cityofzion/neo3-invoker": "1.4.1",
-    "@cityofzion/neo3-signer": "1.1.0"
+    "@cityofzion/neon-dappkit-types": "0.0.5"
   },
   "peerDependencies": {
     "react": "*"
