--- a/packages/wallet-connect-sdk-wallet-core/package.json
+++ b/packages/wallet-connect-sdk-wallet-core/package.json
@@ -30,18 +30,13 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@cityofzion/neo3-invoker": "1.5.1",
-    "@cityofzion/neo3-signer": "1.1.1",
-    "@cityofzion/neon-core": "5.3.0",
-    "@cityofzion/neon-js": "5.3.0",
-    "@cityofzion/neon-invoker": "1.5.1",
-    "@cityofzion/neon-signer": "1.1.1",
-    "@cityofzion/neon-parser": "1.6.5",
-    "@cityofzion/neo3-parser": "1.6.5",
+    "@cityofzion/neon-core": "5.5.0",
+    "@cityofzion/neon-js": "5.5.0",
     "@cityofzion/wallet-connect-sdk-core": "2.5.4",
     "@walletconnect/sign-client": "2.7.3",
     "@walletconnect/types": "2.7.3",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "@cityofzion/neon-dappkit": "0.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.1.3",
