--- a/examples/wc-dapp-vite-vanilla/package.json
+++ b/examples/wc-dapp-vite-vanilla/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:e2e": "playwright test --headed",
+    "test:e2e:headless": "playwright test"
   },
   "devDependencies": {
     "vite": "^4.4.0"
@@ -14,6 +16,8 @@
   "dependencies": {
     "@cityofzion/wallet-connect-sdk-core": "^2.5.4",
     "@walletconnect/sign-client": "^2.9.1",
-    "@walletconnect/types": "^2.9.1"
+    "@walletconnect/types": "^2.9.1",
+    "@playwright/test": "^1.38.0",
+    "playwright": "^1.38.0"
   }
 }
