CU-86a0jg60u - Setup CI/CD on WcSdk repository to check the build and the e2e tests on the pullrequest

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@ common/autoinstallers/*/.npmrc
 
 # jetbrains
 .idea
+
+# Examples build
+examples/*/build/
+examples/*/dist/
+
+# Examples test result
+examples/*/test-results/
