fix mismatch dependencies

--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -37,9 +37,9 @@
   },
   "gitHead": "675a22457e2c967c68f0e2450359e6e687536655",
   "dependencies": {
-    "@cityofzion/neon-core": "5.3.0",
-    "@walletconnect/sign-client": "2.0.0-rc.3",
-    "@walletconnect/types": "2.0.0-rc.3",
+    "@cityofzion/neon-core": "5.5.1",
+    "@walletconnect/sign-client": "2.7.3",
+    "@walletconnect/types": "2.7.3",
     "@cityofzion/neon-dappkit-types": "0.0.5"
   },
   "devDependencies": {
