--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -36,15 +36,15 @@
   },
   "dependencies": {
     "@cityofzion/wallet-connect-sdk-core": "2.6.0",
-    "@walletconnect/sign-client": "2.0.0-rc.3",
-    "@walletconnect/types": "2.0.0-rc.3",
+    "@walletconnect/sign-client": "2.7.3",
+    "@walletconnect/types": "2.7.3",
     "@cityofzion/neon-dappkit-types": "0.0.5"
   },
   "peerDependencies": {
     "react": "*"
   },
   "devDependencies": {
-    "@types/node": "^12.12.38",
+    "@types/node": "^20.1.3",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
     "gh-pages": "^2.2.0",
