--- a/packages/wallet-connect-sdk-wallet-react/package.json
+++ b/packages/wallet-connect-sdk-wallet-react/package.json
@@ -30,11 +30,10 @@
     "docs": "typedoc",
     "fmt": "eslint .",
     "publishDocs:develop": "aws s3 sync ./docs s3://marketing-neon-wallet/dev/wksdk/react --acl public-read",
-    "publishDocs:prod": "aws s3 sync ./docs s3://marketing-neon-wallet/prod/wksdk/react --acl public-read",
-    "prepare": "run-s build"
+    "publishDocs:prod": "aws s3 sync ./docs s3://marketing-neon-wallet/prod/wksdk/react --acl public-read"
   },
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-wallet-core": "2.6.2"
+    "@cityofzion/wallet-connect-sdk-wallet-core": "workspace:*"
   },
   "peerDependencies": {
     "react": "*"
