--- a/examples/wc-dapp-react/package.json
+++ b/examples/wc-dapp-react/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@cityofzion/wallet-connect-sdk-react": "2.6.2",
-    "@cityofzion/neon-dappkit": "^0.0.8",
+    "@cityofzion/neon-dappkit-types": "^0.1.0",
     "@playwright/test": "^1.38.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
