--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -40,7 +40,7 @@
     "@cityofzion/neon-core": "5.5.1",
     "@walletconnect/sign-client": "2.7.3",
     "@walletconnect/types": "2.7.3",
-    "@cityofzion/neon-dappkit-types": "0.0.7"
+    "@cityofzion/neon-dappkit-types": "^0.1.0"
   },
   "devDependencies": {
     "typedoc": "^0.22.10",
