--- a/packages/wallet-connect-sdk-wallet-core/package.json
+++ b/packages/wallet-connect-sdk-wallet-core/package.json
@@ -37,7 +37,7 @@
     "@walletconnect/sign-client": "2.7.3",
     "@walletconnect/types": "2.7.3",
     "moment": "^2.29.4",
-    "@cityofzion/neon-dappkit": "^0.2.0"
+    "@cityofzion/neon-dappkit": "0.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.1.3",
