CU-86a0yxv6t - Implement calculate fee in the Wallet Connect

--- a/.github/workflows/check-build-and-test.yml
+++ b/.github/workflows/check-build-and-test.yml
@@ -20,9 +20,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
       - name: Install PNPM
-        run: npm install -g pnpm
-      - name: PNPM Setup
-        run: pnpm setup
+        run: npm install -g pnpm && pnpm setup
       - name: Install RushJS
         run: npm install -g @microsoft/rush
       - name: Verify Change Logs
