--- a/examples/wc-wallet-react/package.json
+++ b/examples/wc-wallet-react/package.json
@@ -8,20 +8,18 @@
     "build": "cross-env GENERATE_SOURCEMAP=false react-app-rewired build",
     "lint": "eslint ./src/**/*.ts*",
     "test": "react-app-rewired test",
-    "test:e2e": "playwright test --headed",
-    "test:e2e:headless": "playwright test",
     "eject": "react-scripts eject"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/react": "^1.6.1",
+    "@cityofzion/neon-core": "^5.5.1",
     "@cityofzion/neon-dappkit": "^0.0.5",
     "@cityofzion/neon-js": "^5.5.1",
-    "@cityofzion/wallet-connect-sdk-wallet-react": "workspace:../../packages/wallet-connect-sdk-wallet-react",
+    "@cityofzion/wallet-connect-sdk-wallet-react": "file:../../packages/wallet-connect-sdk-wallet-react",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@json-rpc-tools/utils": "^1.7.2",
-    "@playwright/test": "^1.38.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -33,11 +31,12 @@
     "@types/react-qr-reader": "^2.1.3",
     "@types/styled-components": "^5.1.2",
     "@walletconnect/sign-client": "2.4.6",
+    "@walletconnect/types": "^2.10.1",
     "axios": "^0.21.1",
     "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
     "framer-motion": "^4.1.16",
     "keyvaluestorage": "^0.7.1",
-    "playwright": "^1.38.0",
     "prop-types": "^15.7.2",
     "querystring-es3": "^0.2.1",
     "randombytes": "^2.1.0",
@@ -77,5 +76,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.1",
     "react-app-rewired": "^2.2.1"
+  },
+  "resolutions": {
+    "@cityofzion/wallet-connect-sdk-wallet-core": "file:../../packages/wallet-connect-sdk-wallet-core",
+    "@cityofzion/wallet-connect-sdk-core": "file:../../packages/wallet-connect-sdk-core"
   }
 }
