--- a/.github/workflows/check-build-and-test.yml
+++ b/.github/workflows/check-build-and-test.yml
@@ -29,5 +29,27 @@ jobs:
         run: rush check
       - name: Install Dependencies
         run: rush update
-      - name: Build Projects
+      - name: Build Packages
         run: rush rebuild --verbose
+      - name: Rush Purge
+        continue-on-error: true
+        run: rush purge
+      - name: Install E2E Tester
+        working-directory: ./e2e
+        run: pnpm i
+      - name: Install Examples Dependencies
+        working-directory: ./e2e
+        run: pnpm ex:install:unix
+      - name: Build Examples
+        working-directory: ./e2e
+        run: pnpm ex:build:unix
+      - name: Test E2E
+        working-directory: ./e2e
+        run: pnpm test:headless
+      - name: Upload Playwright Report
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: playwright-report
+          path: ./e2e/playwright-report/
+          retention-days: 1
