Fully implement WcSdk e2e tests (finish the connection and use every command expecing the responses)

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -34,7 +34,7 @@ jobs:
         run: rush version --bump
       - name: Install dependencies
         run: rush update
-      - name: Build BaseUrl
+      - name: Build Projects
         run: rush rebuild
       - name: Publish Projects
         run: rush publish --apply --target-branch main --publish --npm-auth-token ${{ secrets.NPM_TOKEN }} --add-commit-details --include-all
