CU-86a0ytmta - Setup Lint, Prettier, Githook (rush)

--- a/packages/wallet-connect-sdk-core/tsconfig.json
+++ b/packages/wallet-connect-sdk-core/tsconfig.json
@@ -3,12 +3,8 @@
   "compilerOptions": {
     "outDir": "./dist"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
+  "include": ["src"],
+  "exclude": ["node_modules"],
   "typedocOptions": {
     "entryPoints": ["./src/index.ts"],
     "out": "docs"
