--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,7 @@
     "esModuleInterop": true,
     "target": "es6",
     "sourceMap": true,
-    "lib": [
-      "es6",
-      "dom"
-    ]
+    "lib": ["es6", "dom"]
   },
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
