--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -27,7 +27,8 @@
   "scripts": {
     "build": "tsc",
     "docs": "typedoc",
-    "fmt": "eslint .",
+    "lint": "eslint .",
+    "format": "eslint --fix",
     "publishDocs:dev": "aws s3 sync ./docs s3://marketing-neon-wallet/dev/wksdk/core --acl public-read",
     "publishDocs:prod": "aws s3 sync ./docs s3://marketing-neon-wallet/prod/wksdk/core --acl public-read",
     "test": "echo \"Error: run tests from root\" && exit 1"
@@ -44,6 +45,9 @@
   },
   "devDependencies": {
     "typedoc": "^0.22.10",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.51.0"
   }
 }
