--- a/packages/wallet-connect-sdk-wallet-core/package.json
+++ b/packages/wallet-connect-sdk-wallet-core/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "build": "tsc",
     "docs": "typedoc",
-    "fmt": "eslint .",
+    "lint": "eslint .",
+    "format": "eslint --fix",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
@@ -43,6 +44,9 @@
     "@types/node": "^20.1.3",
     "typed-emitter": "^2.1.0",
     "typedoc": "^0.22.10",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.51.0"
   }
 }
