--- a/packages/wallet-connect-sdk-svelte/package.json
+++ b/packages/wallet-connect-sdk-svelte/package.json
@@ -24,7 +24,7 @@
     "docs": "typedoc",
     "publishDocs:develop": "aws s3 sync ./docs s3://marketing-neon-wallet/dev/wksdk/react --acl public-read",
     "publishDocs:prod": "aws s3 sync ./docs s3://marketing-neon-wallet/prod/wksdk/react --acl public-read",
-    "predeploy": "cd example && yarn install --force && yarn build",
+    "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
     "lint": "eslint .",
     "format": "eslint --fix"
