--- a/packages/wallet-connect-sdk-svelte/package.json
+++ b/packages/wallet-connect-sdk-svelte/package.json
@@ -20,7 +20,7 @@
   "author": "Kenedy Ribeiro <https://github.com/endkeyCoder>",
   "scripts": {
     "clean": "rm -rf dist/",
-    "build": "rollup -c",
+    "build": "rollup -c --silent",
     "docs": "typedoc",
     "publishDocs:develop": "aws s3 sync ./docs s3://marketing-neon-wallet/dev/wksdk/react --acl public-read",
     "publishDocs:prod": "aws s3 sync ./docs s3://marketing-neon-wallet/prod/wksdk/react --acl public-read",
