--- a/packages/wallet-connect-sdk-core/package.json
+++ b/packages/wallet-connect-sdk-core/package.json
@@ -41,13 +41,15 @@
     "@cityofzion/neon-core": "5.5.1",
     "@walletconnect/sign-client": "2.7.3",
     "@walletconnect/types": "2.7.3",
-    "@cityofzion/neon-dappkit-types": "0.3.0"
+    "@cityofzion/neon-dappkit-types": "0.3.0",
+    "typed-emitter": "^2.1.0"
   },
   "devDependencies": {
     "typedoc": "^0.22.10",
     "typescript": "^4.3.2",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
-    "eslint": "^8.51.0"
+    "eslint": "^8.51.0",
+    "typed-emitter": "^2.1.0"
   }
 }
