CU-86a1dpp9f - WcSdk doesn't work with newer version of signClient. But works with 2.7.3

--- a/examples/wc-dapp-vite-vanilla/package.json
+++ b/examples/wc-dapp-vite-vanilla/package.json
@@ -12,9 +12,7 @@
     "vite": "^4.4.0"
   },
   "dependencies": {
-    "@cityofzion/wallet-connect-sdk-core": "file:../../packages/wallet-connect-sdk-core",
-    "@walletconnect/sign-client": "^2.9.1",
-    "@walletconnect/types": "^2.9.1"
+    "@cityofzion/wallet-connect-sdk-core": "file:../../packages/wallet-connect-sdk-core"
   },
   "resolutions": {
     "@cityofzion/wallet-connect-sdk-core": "file:../../packages/wallet-connect-sdk-core"
