--- a/examples/wc-dapp-sveltekit/package.json
+++ b/examples/wc-dapp-sveltekit/package.json
@@ -9,12 +9,12 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
-    "lokijs": "^1.5.12",
     "@fontsource/fira-mono": "^4.5.10",
     "@neoconfetti/svelte": "^1.0.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
     "@types/cookie": "^0.5.1",
+    "lokijs": "^1.5.12",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "tslib": "^2.4.1",
@@ -23,6 +23,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@cityofzion/neon-dappkit-types": "^0.3.1",
+    "@cityofzion/wallet-connect-sdk-core": "file:../../packages/wallet-connect-sdk-core",
     "@cityofzion/wallet-connect-sdk-svelte": "file:../../packages/wallet-connect-sdk-svelte"
   },
   "resolutions": {
