CU-86a1yjzuw - WCSDK: Implement Ethereum support

--- a/packages/wallet-connect-sdk-wallet-core/package.json
+++ b/packages/wallet-connect-sdk-wallet-core/package.json
@@ -38,7 +38,8 @@
     "@walletconnect/sign-client": "2.7.3",
     "@walletconnect/types": "2.7.3",
     "moment": "^2.29.4",
-    "@cityofzion/neon-dappkit": "0.3.2"
+    "@cityofzion/neon-dappkit": "0.3.2",
+    "ethers": "5.7.2"
   },
   "devDependencies": {
     "@types/node": "^20.1.3",
