--- a/.github/workflows/check-build-and-test.yml
+++ b/.github/workflows/check-build-and-test.yml
@@ -5,7 +5,7 @@ on:
       - main
 
 env:
-  NODE_VERSION: 16.x
+  NODE_VERSION: 18.x
 
 jobs:
   build-and-test:
@@ -39,10 +39,10 @@ jobs:
         run: pnpm i
       - name: Install Examples Dependencies
         working-directory: ./e2e
-        run: pnpm ex:install:unix
+        run: pnpm ex:install
       - name: Build Examples
         working-directory: ./e2e
-        run: pnpm ex:build:unix
+        run: pnpm ex:build
       - name: Test E2E
         working-directory: ./e2e
         run: pnpm test:headless
