--- a/examples/wc-dapp-react/package.json
+++ b/examples/wc-dapp-react/package.json
@@ -17,6 +17,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "toastify-js": "^1.12.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
