--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          OPENAI_API_MODEL: 'gpt-4' # Optional: defaults to "gpt-4"
+          OPENAI_API_MODEL: 'gpt-4-turbo'
           exclude: '**/*.json, **/*.md' # Optional: exclude patterns separated by commas
