--- a/packages/wallet-connect-sdk-wallet-core/package.json
+++ b/packages/wallet-connect-sdk-wallet-core/package.json
@@ -34,9 +34,10 @@
     "@cityofzion/neon-core": "5.5.1",
     "@cityofzion/neon-js": "5.5.1",
     "@cityofzion/wallet-connect-sdk-core": "workspace:*",
+    "@walletconnect/core": "^2.13.1",
     "@walletconnect/jsonrpc-utils": "^1.0.8",
-    "@walletconnect/sign-client": "2.13.0",
     "@walletconnect/types": "2.13.0",
+    "@walletconnect/web3wallet": "^1.12.1",
     "moment": "^2.29.4",
     "@cityofzion/neon-dappkit": "0.4.2",
     "ethers": "5.7.2"
