--- a/examples/wc-dapp-sveltekit/package.json
+++ b/examples/wc-dapp-sveltekit/package.json
@@ -17,6 +17,7 @@
     "lokijs": "^1.5.12",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "toastify-js": "^1.12.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.2"
