--- a/packages/wallet-connect-sdk-react/package.json
+++ b/packages/wallet-connect-sdk-react/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^20.1.3",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
+    "events": "^3.3.0",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
@@ -54,6 +55,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.4",
     "react-scripts": "^4.0.3",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.3.2",
     "typedoc": "^0.22.10",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
