--- a/packages/wallet-connect-sdk-svelte/package.json
+++ b/packages/wallet-connect-sdk-svelte/package.json
@@ -36,18 +36,21 @@
     "svelte": "*"
   },
   "devDependencies": {
-    "svelte": "^4.0.5",
-    "tslib": "^2.4.1",
     "@rollup/plugin-commonjs": "~25.0.7",
-    "rollup": "~4.1.4",
-    "rollup-plugin-auto-external": "~2.0.0",
-    "rollup-plugin-dts": "~6.1.0",
-    "rollup-plugin-esbuild": "~6.1.0",
-    "typescript": "^4.3.2",
-    "typedoc": "^0.22.10",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
-    "eslint": "^8.51.0"
+    "eslint": "^8.51.0",
+    "events": "^3.3.0",
+    "rollup": "~4.1.4",
+    "rollup-plugin-auto-external": "~2.0.0",
+    "rollup-plugin-esbuild": "~6.1.0",
+    "rollup-plugin-polyfill-node": "^0.13.0",
+    "rollup-plugin-ts": "^3.4.5",
+    "svelte": "^4.0.5",
+    "tslib": "^2.4.1",
+    "typed-emitter": "^2.1.0",
+    "typedoc": "^0.22.10",
+    "typescript": "^4.3.2"
   },
   "types": "./dist/index.d.ts",
   "type": "module",
