--- a/packages/wallet-connect-sdk-wallet-react/package.json
+++ b/packages/wallet-connect-sdk-wallet-react/package.json
@@ -44,6 +44,7 @@
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
     "cross-env": "^7.0.2",
+    "events": "^3.3.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
@@ -53,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "eslint": "^8.51.0",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.3.2",
     "typedoc": "^0.22.10"
   },
