--- a/examples/wc-wallet-react/package.json
+++ b/examples/wc-wallet-react/package.json
@@ -69,6 +69,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
